--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -266,3 +266,48 @@
     }
   }
 }
+
+.home-shop{
+  .kiosk-grid{
+    article.kiosk-box{
+      h6{
+        font-family: $knockout-lite;
+        text-transform: uppercase;
+        font-size: 30px;
+      }
+      .gift-card-img{
+        padding-bottom: 100%;
+        height: 0;
+        position: relative;
+        width: 100%;
+        .gift-card-img-text{
+          position: absolute;
+          left: 0;
+          top: 0;
+          height: 100%;
+          width: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          padding: 10px;
+          border: 2px solid $toro_red;
+          span{
+            background-color: $toro_red;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            padding: 10px 50px;
+            font-family: $knockout-bantam;
+            color: $oro_yellow;
+            text-transform: uppercase;
+            font-size: 55px;
+            height: 100%;
+            width: 100%;
+          }
+        }
+      }
+    }
+
+  }
+}
