--- a/templates/index.html
+++ b/templates/index.html
@@ -90,6 +90,72 @@
   </div>
 </section>
 
+<section class="home-shop">
+  <div class="content-margins">
+    <div class="section-title-container">
+      <img src="{{ static('img/yellow_triangle.png')}}" alt="">
+      <h2>Shop</h2>
+    </div>
+
+    <div class="home-shop-cont">
+      <div class="shop-little-spain-shops kiosk-grid">
+        <article class="kiosk-box">
+          <a href="/shop/#shop-little-spain">
+            <div class="kiosk-box-img">
+
+              <img src="{{pages.by_slug.shop.fields['shop-products'].products[0].image.url}}" alt="{{pages.by_slug.shop.fields['shop-products'].products[0].image.alt}}">
+
+            </div>
+            <h6>Shop Little Spain</h6>
+          </a>
+        </article>
+
+        <article class="kiosk-box">
+          <a href="/shop/#shop-online">
+            <div class="kiosk-box-img kiosk-bordered-img">
+              <img src="{{pages.by_slug.shop.fields['online-products'].products[0].image.url}}" alt="">
+
+            </div>
+            <h6>Shop Online</h6>
+          </a>
+        </article>
+
+        <article class="kiosk-box">
+          <a href="/shop/#gift-cards">
+            <div class="gift-card-img">
+              <div class="gift-card-img-text">
+                <span>Give the Gift of Little Spain</span>
+              </div>
+            </div>
+            <h6>Gift Cards</h6>
+          </a>
+        </article>
+
+
+      </div>
+    </div>
+  </div>
+</section>
+
+<section class="home-el-blog">
+  <div class="content-margins">
+    <div class="section-title-container">
+      <img src="{{ static('img/yellow_triangle.png')}}" alt="">
+      <h2>El Blog</h2>
+    </div>
+
+    <div class="home-el-blog-posts">
+      {% for event in boxes.events.all %}
+      <article>
+        <a href="">
+          {{event.name}}
+        </a>
+      </article>
+      {% endfor %}
+    </div>
+  </div>
+</section>
+
 <section class="ig-feed">
   <div class="content-margins">
     <div class="ig-boxes">
