--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,10 @@
 
 <!-- index.html -->
 
+<section class="home-hero">
+  <img src="{{pages.by_slug.home.fields['home-hero-image'].image.url}}" alt="{{pages.by_slug.home.fields['home-hero-image'].image.alt}}">
+</section>
+
 <section class="home-description">
   <div class="content-margins">
     <div class="home-desc-inner">
@@ -31,8 +35,10 @@
             </div>
             <div class="home-rest-caption">
               {{rest.fields.home_description}}
-              <a href="{{rest.url}}" class="more-info">Visit</a>
-              <a href="" class='more-info'>Reserve</a>
+              <div class="home-rest-links">
+                <a href="{{rest.url}}" class="more-info">Visit</a>
+                <a href="" class='more-info'>Reserve</a>
+              </div>
             </div>
           </div>
         </div>
@@ -72,16 +78,16 @@
       <h2>Happenings</h2>
     </div>
 
-    <div class="home-happenings-events">
+    <div class="happenings-events">
       {% for event in boxes.events.all %}
 
-        <a href="{{event.url}}" class="home-happenings-event">
-          <div class='home-happenings-upper'>
+        <a href="{{event.url}}" class="happenings-event">
+          <div class='happenings-upper'>
             <h6>{{event.starts|date('%B %d')}}</h6>
             <h3>{{event.name}}</h3>
             <p>{{event.fields.dek}}</p>
           </div>
-          <div class="home-happenings-img">
+          <div class="happenings-img">
             <img src="{{event.image.url}}" alt="{{event.image.alt_text}}">
           </div>
         </a>
@@ -144,12 +150,21 @@
       <h2>El Blog</h2>
     </div>
 
-    <div class="home-el-blog-posts">
-      {% for event in boxes.events.all %}
-      <article>
-        <a href="">
-          {{event.name}}
-        </a>
+    <div class="home-el-blog-posts blog-articles-container">
+      {% for post in boxes.blog.all %}
+      <article class='blog-post'>
+        <div class="image">
+          <a href='{{post.url}}'>
+            <img src="{{ post.image.url }}" alt='{{post.image.alt}}'>
+          </a>
+        </div>
+        <div class="info">
+          <a href='{{post.url}}'>
+            <p class="blog-post__tag">{{ post.categories[0].name }}</p>
+            <h1 class="blog-post__title">{{ post.title }}</h1>
+            <p class="blog-post__desc">{{ post.fields.dek }}</p>
+          </a>
+        </div>
       </article>
       {% endfor %}
     </div>
