--- a/assets/css/_home.scss
+++ b/assets/css/_home.scss
@@ -93,13 +93,27 @@
   display: flex;
   justify-content: space-between;
 
+  @media (max-width: 767px){
+    flex-direction: column;
+  }
   &:nth-child(even){
     flex-direction: row-reverse;
+    @media (max-width: 767px){
+      flex-direction: column;
+    }
   }
 
   .home-rest-img{
     padding: 10px;
     width: 75%;
+
+    @media (max-width: 1200px){
+      width: 66%;
+    }
+    @media (max-width: 767px){
+      width: 100%;
+    }
+
 
     // .home-rest-img-cont{
     //   height: 0;
@@ -119,6 +133,14 @@
   .home-rest-info{
     width: 25%;
     border-left: 2px solid $toro_red;
+    @media (max-width: 1200px){
+      width: 34%;
+    }
+    @media (max-width: 767px){
+      width: 100%;
+      border: 0px;
+    }
+
     .home-rest-name{
       background-color: $toro_red;
       display: flex;
@@ -143,6 +165,16 @@
       p{
         margin-bottom: 20px;
       }
+      .home-rest-links{
+        display: flex;
+        flex-direction: column;
+        @media (max-width: 767px){
+          flex-direction: row;
+        }
+        @media (max-width: 500px){
+          flex-direction: column;
+        }
+      }
       .more-info{
         color: $toro_red;
         text-decoration: none;
@@ -150,6 +182,17 @@
         margin-bottom: 25px;
         width: 150px;
         padding:  15px 0;
+        transition: ease 300ms all;
+        &:hover{
+          color: white;
+          background-color: $toro_red;
+        }
+        @media (max-width: 767px){
+          margin: 0 10px 25px 10px;
+        }
+        @media (max-width: 500px){
+          margin: 0 10px 15px 10px;
+        }
       }
     }
   }
@@ -157,6 +200,9 @@
     .home-rest-info{
       border-right: 2px solid $toro_red;
       border-left: 0px;
+      @media (max-width: 767px){
+        border: 0px;
+      }
     }
   }
 }
@@ -172,6 +218,12 @@
     display: flex;
     align-items: center;
     flex-direction: column;
+    @media (max-width: 920px){
+      width: 23.5%;
+    }
+    @media (max-width: 767px){
+      width: 48.5%;
+    }
     a{
       text-decoration: none;
       &:hover h6{
@@ -219,51 +271,85 @@
 
 .home-happenings{
   margin-bottom: 50px;
-  .home-happenings-events{
+}
+.happenings-events{
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 30px;
+  .happenings-event{
+    width: 24%;
+    padding: 10px;
+    border: 2px solid $toro_red;
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
-    margin-bottom: 30px;
-    .home-happenings-event{
-      width: 24%;
-      padding: 10px;
-      border: 2px solid $toro_red;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      text-decoration: none;
-      color: black;
-      .home-happenings-upper{
-        margin-bottom: 20px;
-      }
-      h6{
-        font-family: $domaine;
-        font-weight: 900;
-        margin-bottom: 10px;
-      }
-      h3{
-        text-transform: uppercase;
-        color: $toro_red;
-        font-family: $knockout-lite;
-        font-size: 40px;
-        line-height: 1em;
-        margin-bottom: 7px;
-      }
-      .home-happenings-img{
-        width: 100%;
-        height: 0;
-        padding-bottom: 100%;
-        position: relative;
-      }
-      img{
-        position: absolute;
-        left: 0;
-        top:0;
+    text-decoration: none;
+    color: black;
+    transition: 250ms ease background-color;
 
-        object-fit: cover;
-        width: 100%;
-        height: 100%;
+    .happenings-upper{
+      margin-bottom: 20px;
+    }
+    h6{
+      font-family: $domaine;
+      font-weight: 900;
+      margin-bottom: 10px;
+    }
+    h3{
+      text-transform: uppercase;
+      color: $toro_red;
+      font-family: $knockout-lite;
+      font-size: 40px;
+      line-height: 1em;
+      margin-bottom: 7px;
+      transition: 250ms ease all;
+    }
+    &:hover{
+      background-color: $toro_red;
+      color: white;
+      h3{
+        color: $oro_yellow;
       }
     }
+    .happenings-img{
+      width: 100%;
+      height: 0;
+      padding-bottom: 100%;
+      position: relative;
+    }
+    img{
+      position: absolute;
+      left: 0;
+      top:0;
+
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+  }
+}
+
+.home-happenings{
+  .happenings-events{
+    @media (max-width: 667px){
+      flex-wrap: wrap;
+    }
+    .happenings-event{
+      @media (max-width: 1200px){
+        width: 32%;
+        &:last-child(){
+          display: none;
+        }
+      }
+      @media (max-width: 667px){
+        width: 100%;
+        margin-bottom: 30px;
+        &:last-child(){
+          display: block;
+        }
+      }
+    }
+
   }
 }
 
@@ -309,5 +395,18 @@
       }
     }
 
+  }
+}
+
+.home-el-blog-posts.blog-articles-container{
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.home-hero{
+  // margin-bottom: 50px;
+  img{
+    width: 100vw;
   }
 }
