--- a/templates/events_content.html
+++ b/templates/events_content.html
@@ -3,6 +3,7 @@
 <section class="events-landing">
   <div class="content-margins">
 <button id="ajaxButton" url='{{current.url}}' >DO THE AJAX</button>
+{{current.request}}
     <div class="page-landing-header">
       <img src="{{static('img/happenings-landing/Left.png')}}" alt="">
       <h1>Happenings</h1>
