--- a/templates/events_content.html
+++ b/templates/events_content.html
@@ -41,7 +41,9 @@
 </div>
 </div>
 </section>
-
+<script>
+	window.events = {{ boxes.events.all|tojson }};
+	</script>
 
 
 {% include "footer.html" %}
