--- a/templates/events_landing.html
+++ b/templates/events_landing.html
@@ -24,15 +24,15 @@
     <div class='filter'>
 <h2> Filter </h2>
     </div>
-<div class='all-events'>
+<div class='all-events happenings-events'>
   {% for event in boxes.events.all %}
-    <a href="{{event.url}}" class="home-happenings-event">
-      <div class='home-happenings-upper'>
+    <a href="{{event.url}}" class="happenings-event">
+      <div class='happenings-upper'>
         <h6>{{event.starts|date('%B %d')}}</h6>
         <h3>{{event.name}}</h3>
         <p>{{event.fields.dek}}</p>
       </div>
-      <div class="home-happenings-img">
+      <div class="happenings-img">
         <img src="{{event.image.url}}" alt="{{event.image.alt_text}}">
       </div>
     </a>
