--- a/templates/footer.html
+++ b/templates/footer.html
@@ -70,8 +70,9 @@
   </footer><!-- #colophon -->
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
+<script src="{{static('js/slick/slick.js')}}"></script>
 <script src="{{ static('js/scripts.js') }}"></script>
+
 </body>
 </html>
 
