--- a/templates/header.html
+++ b/templates/header.html
@@ -33,10 +33,13 @@
   <link rel="stylesheet" href="{{ static('css/skeleton.css') }}"> -->
   <link rel="stylesheet" href="{{ static('dist/style.css') }}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css">
+  <link rel="stylesheet" href="{{static('js/slick/slick.css')}}">
 
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" href="{{ account.site.favicon }}">
+
+
 
 </head>
 
@@ -44,7 +47,7 @@
   <a class="skip-link screen-reader-text" href="#content">Skip to content</a>
   <header id="masthead" class="site-header">
     <div class="site-branding">
-      <a href="#{{ account.site.url }}" id="masthead-logo">
+      <a href="{{ account.site.url }}" id="masthead-logo">
         <svg>
           <use xlink:href="{{ static('img/symbols.svg#MLS_horizontal')}}"></use>
         </svg>
@@ -104,10 +107,6 @@
     </nav><!-- #primary-menu -->
   </header><!-- #masthead -->
 
-
-
-    {% block content %}
-    {% endblock %}
 <!-- #content open -->
     <div id="content">
 
