--- a/assets/css/_fonts.scss
+++ b/assets/css/_fonts.scss
@@ -13,6 +13,8 @@ $knockout-welter : "Knockout 50 A", "Knockout 50 B";
 // $knockout-lite : 'Knockout-HTF49-Liteweight', Arial Narrow, Arial, sans-serif;
 $knockout-lite : "Knockout 67 A", "Knockout 67 B";
 
+// $knockout-feather : "Knockout-HTF68-FullFeatherwt";
+
 
 
 $domaine : 'Domaine', Georgia, Times, Times New Roman, serif;
